<resources>
    <string name="app_name">Cash Register Application</string>
    <string name="buyButton">BUY</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="managerButton">Manager</string>
    <string name="restock">Restock</string>
    <string name="history">History</string>
    <string name="restockquantiy">Enter New Quantity</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
</resources>